Blind add supervisor queue and NFS

--- a/src/stubs/Homestead.yaml
+++ b/src/stubs/Homestead.yaml
@@ -12,6 +12,10 @@ keys:
 folders:
     - map: ~/Code
       to: /home/vagrant/Code
+      type: "nfs"
+
+supervisor:
+    - /home/vagrant/Code
 
 sites:
     - map: homestead.app
